[gd_scene load_steps=3 format=4 uid="uid://dystxlr41lid7"]

[ext_resource type="Texture2D" uid="uid://berthf545d4ct" path="res://textures/icons/globe.png" id="1"]
[ext_resource type="Script" uid="uid://c0dnv7336ud6s" path="res://scenes/window_button.gd" id="2"]

[node name="WindowsButton" type="Button"]
custom_minimum_size = Vector2(100, 100)
size_flags_horizontal = 6
size_flags_vertical = 4
focus_mode = 0
mouse_filter = 1
theme_type_variation = &"ButtonSelection"
theme_override_constants/icon_max_width = 64
toggle_mode = true
icon = ExtResource("1")
icon_alignment = 1
expand_icon = true
script = ExtResource("2")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
